# WordsServer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  test.h
Server/: CMakeLists.txt  TaskManager.cpp  TaskManager.h  ThreadPool.cpp  ThreadPool.h  WordsServer.cpp  WordsServer.h
Server/Parser/: IProtocolParser.h
Server/Sockets/: CMakeLists.txt  IEventHandler.h  ISocket.h
Server/Sockets/TCP/: ClientHandler.cpp  ClientHandler.h  ServerHandler.cpp  ServerHandler.h  TCPServerSocket.cpp  TCPServerSocket.h
